--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -27,14 +27,14 @@
           <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
             <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button
               [ngClass]="isMobile ? 'pl-2 pr-2' : ''">
-              Material Wise
+              All Materials
             </button>
           </a>
 
           <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
             <button [class.active]="buttonName == 'projectWise'" class="color-black actv-btn" mat-button
               [ngClass]="isMobile ? 'pl-2 pr-2' : ''">
-              Project Wise
+              Projects
             </button>
           </a>
         </div>
