--- a/src/app/features/dashboard/bom/bom-myMaterial/bom-myMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-myMaterial/bom-myMaterial.component.html
@@ -27,10 +27,10 @@
                     </th>
                   </tr>
 
-                  <ng-container formArrayName="materialGroup">
-                    <tr class="mat-row bom-materials-row"
-                      *ngFor="let subcategory of category.materialList; let sc = index" [formGroupName]="sc">
-                      <ng-container *ngIf="!subcategory.isNull">
+                  <ng-container formArrayName="materialGroup"
+                    *ngFor="let subcategory of category.materialList; let sc = index">
+                    <ng-container *ngIf="!subcategory.isNull">
+                      <tr class="mat-row bom-materials-row" [formGroupName]="sc">
                         <td class="mat-cell material-category">
                           <span class="limitcharacter-myMaterialName"
                             matTooltip="{{ subcategory.materialName }}">{{ subcategory.materialName }}</span>
@@ -107,9 +107,9 @@
                           </div>
                         </ng-container>
 
-                      </ng-container>
+                      </tr>
 
-                    </tr>
+                    </ng-container>
                   </ng-container>
                 </table>
               </div>
