po table changes

--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -6,12 +6,12 @@
         {{ this.poData.poStatusChangedOn | date: "dd-MMM-yyy" }}
 
         <div *ngIf="this.mode === 'view'" class="float-right">
-          <span class="text-semi-bold color-main cursor-pointer p-r-15"><a (click)="downloadPo()" class="font-size16"
-              matTooltip="Download PO">
-              <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15"
-                *ngIf="!showResponsiveDesign">Download P.O</span></a></span>
-          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn"
-            (click)="openShortClose()">
+          <span class="text-semi-bold color-main cursor-pointer p-r-15"
+            ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO">
+              <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
+            ></span
+          >
+          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="openShortClose()">
             Short Close
           </button>
         </div>
@@ -19,16 +19,15 @@
 
       <div class="col-md-8 col-lg-8" *ngIf="this.mode === 'edit'"></div>
       <div class="col-sm-12 col-md-4 col-lg-4 m-t-5 text-right" *ngIf="this.mode === 'edit'">
-        <div
-          [ngClass]="!showResponsiveDesign ? 'display-flex justify-content-flex-end' : 'display-flex justify-content-space-between'">
+        <div [ngClass]="!showResponsiveDesign ? 'display-flex justify-content-flex-end' : 'display-flex justify-content-space-between'">
           <div class="p-r-10 p-t-10">
-            <span class="text-semi-bold color-main cursor-pointer"><a (click)="downloadPo()" class="font-size16"
-                matTooltip="Download PO">
-                <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15"
-                  *ngIf="!showResponsiveDesign">Download P.O</span></a></span>
+            <span class="text-semi-bold color-main cursor-pointer"
+              ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO">
+                <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
+              ></span
+            >
           </div>
-          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn"
-            (click)="selectApprover()" [disabled]="!isPoValid">
+          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
             Send P.O For Approval
           </button>
         </div>
@@ -38,18 +37,17 @@
       <div class="col-sm-12 col-md-5 col-lg-4 m-t-5 text-right" *ngIf="this.mode === 'requiredApproval'">
         <div class="display-flex justify-content-space-between">
           <div class="p-r-10 p-t-10">
-            <span class="text-semi-bold color-main cursor-pointer"><a (click)="downloadPo()" class="font-size16"
-                matTooltip="Download PO">
-                <img src="../../../../assets/images/download-po.png" /> <span class="p-l-5 font-size15"
-                  *ngIf="!showResponsiveDesign">Download P.O</span></a></span>
+            <span class="text-semi-bold color-main cursor-pointer"
+              ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO">
+                <img src="../../../../assets/images/download-po.png" /> <span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
+              ></span
+            >
           </div>
           <div>
-            <button mat-raised-button class="background-color-white main-button main-color m-r-5"
-              (click)="poApproval('rejected')">
+            <button mat-raised-button class="background-color-white main-button main-color m-r-5" (click)="poApproval('rejected')">
               Reject
             </button>
-            <button mat-raised-button class="main-background-color main-button color-white"
-              (click)="poApproval('approved')">
+            <button mat-raised-button class="main-background-color main-button color-white" (click)="poApproval('approved')">
               Approve
             </button>
           </div>
@@ -60,32 +58,36 @@
       <div class="main-div-po m-b-45">
         <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData"> </app-po-card>
       </div>
-      <app-po-table #poTable *ngIf="tableData.length" (QuantityAmountValidation)="QuantityAmountValidation($event)"
-        [poTableData]="tableData" [purchaseOrderCurrency]="currency" [additionalOtherCostInfo]="additionalOtherCost"
-        [poData]="poData">
+      <app-po-table
+        #poTable
+        *ngIf="tableData.length"
+        [poTableData]="tableData"
+        [purchaseOrderCurrency]="currency"
+        [additionalOtherCostInfo]="additionalOtherCost"
+        [poData]="poData"
+      >
       </app-po-table>
     </div>
 
     <div class="row doc-froala-div">
       <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-4 froala-design' : 'col-sm-12 col-md-4 p-b-0'">
-        <app-po-documents #poDocument [documentData]="documentList" *ngIf="documentList || documentList === null">
-        </app-po-documents>
+        <app-po-documents #poDocument [documentData]="documentList" *ngIf="documentList || documentList === null"> </app-po-documents>
       </div>
-      <div
-        [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-8 hidePoweredBy froala-design' : 'col-sm-12 col-md-8 hidePoweredBy p-b-0'"
-        *ngIf="mode === 'edit'">
+      <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-8 hidePoweredBy froala-design' : 'col-sm-12 col-md-8 hidePoweredBy p-b-0'" *ngIf="mode === 'edit'">
         <form [formGroup]="poTerms">
           <angular-editor formControlName="textArea" [config]="config"></angular-editor>
           <!-- <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms['textArea']">Hello, Froala!</textarea> -->
         </form>
       </div>
-      <div [ngClass]="
+      <div
+        [ngClass]="
           showResponsiveDesignDown
             ? 'col-sm-12 col-md-8 background-white-color border-radius parent no-terms-window'
             : 'col-sm-12 col-md-8 background-white-color border-radius parent'
-        " *ngIf="mode === 'view' || mode === 'requiredApproval'">
-        <div class="word-wrap" *ngIf="this.terms && terms.termsDesc !== '' ? true : false"
-          [innerHTML]="terms.termsDesc"></div>
+        "
+        *ngIf="mode === 'view' || mode === 'requiredApproval'"
+      >
+        <div class="word-wrap" *ngIf="this.terms && terms.termsDesc !== '' ? true : false" [innerHTML]="terms.termsDesc"></div>
         <div class="center-element" *ngIf="this.terms && terms.termsDesc !== '' ? false : true">No Term To View</div>
       </div>
     </div>
