--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,16 +1,17 @@
-<div class="page-start-point mt-5 pt-4">
+<div class="page-start-point mt-5 pt-4 add-edit-receipts">
   <div class="p-b-20 grn-dashboard min-height parent">
-    <div class="row align-items-center py-3">
+    <div class="row align-items-center py-3 grn-first-row">
       <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
-      <div class="col-xs-6 text-semi-bold po-number-grn">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-semi-bold po-number-grn">
         PO Number:
         <span *ngIf="poData && poData.poNumber">
           {{ poData.poNumber }}
         </span>
       </div>
-      <div class="col-xs-6">
+
+      <div class="col-md-6 col-sm-6 col-xs-12 po-grn-actions">
         <button (click)="viewBack()" mat-raised-button
-          class="background-white-color main-color main-button back-btn-grn pull-right">
+          class="background-white-color main-color main-button back-btn-grn pull-right grn-transparent-btn">
           Back
         </button>
 
@@ -64,6 +65,12 @@
                   <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
                   <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.materialQuantity }}
                     {{ element.materialUnit }}</td>
+                </ng-container>
+
+                <!-- Delivered Date Column -->
+                <ng-container matColumnDef="Delivered Date">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Date</th>
+                  <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.deliveredDate }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Delivered Quantity">
