--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -539,6 +539,10 @@ body,
   //         border-left: 5px solid #1896BA;
 
   // }
+
+  .grn-transparent-btn{
+    display: block !important;
+  }
 }
 
 @media only screen and (max-width: 1023px) {
