--- a/src/assets/scss/pages/grn.scss
+++ b/src/assets/scss/pages/grn.scss
@@ -190,3 +190,44 @@ $mat-row-horizontal-padding: 12px;
     opacity: 0.5;
   }
 }
+
+.receipt-unit{
+  width: 80px;
+}
+
+.receipt-brand-name,
+.receipt-awarded-qty,
+.receipt-delivered-qty{
+  width: 100px;
+}
+
+.receipt-delivered-date {
+  width: 150px;
+  .mat-form-field-infix {
+    width: 100px;
+  }
+}
+
+.receipt-received-qty {
+  padding-right: 12px !important;
+  width: 130px;
+  .mat-form-field-infix {
+    width: 130px;
+  }
+}
+
+.receipt-material-name{
+  padding-left: 12px !important;
+}
+
+@media only screen and (max-width: 462px){
+  .grn-dashboard{
+    .po-number-grn{
+      margin: 0 0 10px 0;
+    }
+  }
+
+  .add-edit-receipts .grn-first-row{
+      padding-top: 0px !important;
+  }
+}
