--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -2,10 +2,8 @@
   <div class="row m-0">
     <div class="d-none d-sm-block col-lg-8 col-md-7 col-sm-6 col-xs-12 pl-0 landing-page-image">
       <div class="min-height">
-        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image"
-          class="signup-image" style="width: 100%;" />
-        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image"
-          class="login-image" style="width: 100%;" />
+        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image" class="signup-image" style="width: 100%;" />
+        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
       </div>
     </div>
     <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 offset-lg-0 parent right-align-form mxw-500px">
@@ -17,15 +15,13 @@
         <mat-tab-group class="tab-signin-up" [selectedIndex]="index" (selectedTabChange)="tabChanged($event)">
           <mat-tab label="Sign In">
             <div>
-              <signin *ngIf="callingCode" [countryList]="countryList" [countryCode]="countryCode"
-                [callingCode]="callingCode"></signin>
+              <signin *ngIf="callingCode && countryList && countryCode" [countryList]="countryList" [countryCode]="countryCode" [callingCode]="callingCode"></signin>
             </div>
           </mat-tab>
 
           <mat-tab label="Sign Up">
             <div>
-              <signup *ngIf="callingCode" [countryList]="countryList" [countryCode]="countryCode"
-                [callingCode]="callingCode"></signup>
+              <signup *ngIf="callingCode" [countryList]="countryList" [countryCode]="countryCode" [callingCode]="callingCode"></signup>
             </div>
           </mat-tab>
         </mat-tab-group>
