--- a/src/app/shared/components/advance-search/advance-search.component.html
+++ b/src/app/shared/components/advance-search/advance-search.component.html
@@ -19,16 +19,23 @@
             <mat-label>Select Projects</mat-label>
             <mat-select multiple (openedChange)="projectInput.focus()" #projectsSelect>
               <div class="d-flex">
-                <input class="pl-3" #projectInput matInput focused="'true'" type="text"
-                  (input)="search($event.target.value, 'projects')" autocomplete="off" placeholder="search"
-                  (keydown)="$event.stopPropagation()" />
+                <input
+                  class="pl-3"
+                  #projectInput
+                  matInput
+                  focused="'true'"
+                  type="text"
+                  (input)="search($event.target.value, 'projects')"
+                  autocomplete="off"
+                  placeholder="search"
+                  (keydown)="$event.stopPropagation()"
+                />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
               <mat-divider></mat-divider>
-              <mat-option *ngFor="let project of projectsList" [value]="project"
-                (click)="searchValue(project, 'projects')">
+              <mat-option *ngFor="let project of projectsList" [value]="project" (click)="searchValue(project, 'projects')">
                 {{ project.projectName }}
               </mat-option>
             </mat-select>
@@ -39,9 +46,7 @@
               <li *ngFor="let option of projectsSelect.selected" class="d-flex justify-content-between">
                 {{ getValueWithMaxWidth({fval: option.value.projectName}) }}
                 <span class="font-size20">
-                  <mat-icon
-                    (click)="removeId(option.value.projectId, 'projects'); searchValue(option.value, 'projects')"
-                    inline="true">close </mat-icon>
+                  <mat-icon (click)="removeId(option.value.projectId, 'projects'); searchValue(option.value, 'projects')" inline="true">close </mat-icon>
                 </span>
               </li>
             </ul>
@@ -64,16 +69,23 @@
             <mat-label>Select Suppliers</mat-label>
             <mat-select multiple (openedChange)="supplierInput.focus()" #suppliersSelect>
               <div class="d-flex">
-                <input class="pl-3" #supplierInput matInput focused="'true'" type="text"
-                  (input)="search($event.target.value, 'suppliers')" autocomplete="off" placeholder="search"
-                  (keydown)="$event.stopPropagation()" />
+                <input
+                  class="pl-3"
+                  #supplierInput
+                  matInput
+                  focused="'true'"
+                  type="text"
+                  (input)="search($event.target.value, 'suppliers')"
+                  autocomplete="off"
+                  placeholder="search"
+                  (keydown)="$event.stopPropagation()"
+                />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
               <mat-divider></mat-divider>
-              <mat-option *ngFor="let project of suppliersList" [value]="project"
-                (click)="searchValue(project, 'suppliers')">
+              <mat-option *ngFor="let project of suppliersList" [value]="project" (click)="searchValue(project, 'suppliers')">
                 {{ project.supplier_name }}
               </mat-option>
             </mat-select>
@@ -84,9 +96,7 @@
               <li *ngFor="let option of suppliersSelect.selected" class="d-flex justify-content-between">
                 {{ getValueWithMaxWidth({fval: option.value.supplier_name}) }}
                 <span class="font-size20">
-                  <mat-icon
-                    (click)="removeId(option.value.supplierId, 'suppliers'); searchValue(option.value, 'suppliers')"
-                    inline="true">close </mat-icon>
+                  <mat-icon (click)="removeId(option.value.supplierId, 'suppliers'); searchValue(option.value, 'suppliers')" inline="true">close </mat-icon>
                 </span>
               </li>
             </ul>
@@ -108,16 +118,23 @@
           <mat-label>Select Materials</mat-label>
           <mat-select multiple (openedChange)="materialInput.focus()" #materialsSelect>
             <div class="d-flex">
-              <input class="pl-3" #materialInput matInput focused="'true'" type="text"
-                (input)="search($event.target.value, 'materials')" autocomplete="off" placeholder="search"
-                (keydown)="$event.stopPropagation()" />
+              <input
+                class="pl-3"
+                #materialInput
+                matInput
+                focused="'true'"
+                type="text"
+                (input)="search($event.target.value, 'materials')"
+                autocomplete="off"
+                placeholder="search"
+                (keydown)="$event.stopPropagation()"
+              />
               <button mat-button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
             </div>
             <mat-divider></mat-divider>
-            <mat-option *ngFor="let project of materialsList" [value]="project"
-              (click)="searchValue(project, 'materials')">
+            <mat-option *ngFor="let project of materialsList" [value]="project" (click)="searchValue(project, 'materials')">
               {{ project.materialName }}
             </mat-option>
           </mat-select>
@@ -128,9 +145,7 @@
             <li *ngFor="let option of materialsSelect.selected" class="d-flex justify-content-between">
               {{ getValueWithMaxWidth({fval: option.value.materialName}) }}
               <span class="font-size20">
-                <mat-icon
-                  (click)="removeId(option.value.materialCode, 'materials'); searchValue(option.value, 'materials')"
-                  inline="true">close </mat-icon>
+                <mat-icon (click)="removeId(option.value.materialCode, 'materials'); searchValue(option.value, 'materials')" inline="true">close </mat-icon>
               </span>
             </li>
           </ul>
@@ -167,10 +182,8 @@
           </mat-expansion-panel-header>
 
           <section class="example-section pb-2">
-            <mat-checkbox class="example-margin d-block" (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)"
-              #bidSubmitted> Bid Submitted</mat-checkbox>
-            <mat-checkbox class="example-margin d-block" (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)"
-              #notSubmitted> Not Submitted</mat-checkbox>
+            <mat-checkbox class="example-margin d-block" (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)" #bidSubmitted> Bid Submitted</mat-checkbox>
+            <mat-checkbox class="example-margin d-block" (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)" #notSubmitted> Not Submitted</mat-checkbox>
           </section>
         </mat-expansion-panel>
       </div>
@@ -190,9 +203,17 @@
             <mat-label>Select Users</mat-label>
             <mat-select multiple (openedChange)="usersInput.focus()" #usersSelect>
               <div class="d-flex">
-                <input class="pl-3" #usersInput matInput focused="'true'" type="text"
-                  (input)="search($event.target.value, 'users')" autocomplete="off" placeholder="search"
-                  (keydown)="$event.stopPropagation()" />
+                <input
+                  class="pl-3"
+                  #usersInput
+                  matInput
+                  focused="'true'"
+                  type="text"
+                  (input)="search($event.target.value, 'users')"
+                  autocomplete="off"
+                  placeholder="search"
+                  (keydown)="$event.stopPropagation()"
+                />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
@@ -209,9 +230,7 @@
               <li *ngFor="let option of usersSelect.selected" class="d-flex justify-content-between">
                 {{ getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName}) }}
                 <span class="font-size20">
-                  <mat-icon
-                    (click)="removeId(option.value.ProjectUser.userId, 'users'); searchValue(option.value, 'users')"
-                    inline="true">close </mat-icon>
+                  <mat-icon (click)="removeId(option.value.ProjectUser.userId, 'users'); searchValue(option.value, 'users')" inline="true">close </mat-icon>
                 </span>
               </li>
             </ul>
@@ -234,16 +253,23 @@
             <mat-label>Select Users</mat-label>
             <mat-select multiple (openedChange)="approversInput.focus()" #approversSelect>
               <div class="d-flex">
-                <input class="pl-3" #approversInput matInput focused="'true'" type="text"
-                  (input)="search($event.target.value, 'approvers')" autocomplete="off" placeholder="search"
-                  (keydown)="$event.stopPropagation()" />
+                <input
+                  class="pl-3"
+                  #approversInput
+                  matInput
+                  focused="'true'"
+                  type="text"
+                  (input)="search($event.target.value, 'approvers')"
+                  autocomplete="off"
+                  placeholder="search"
+                  (keydown)="$event.stopPropagation()"
+                />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
               <mat-divider></mat-divider>
-              <mat-option *ngFor="let project of approversList" [value]="project"
-                (click)="searchValue(project, 'approvers')">
+              <mat-option *ngFor="let project of approversList" [value]="project" (click)="searchValue(project, 'approvers')">
                 {{ project.ProjectUser.firstName }} {{ project.ProjectUser.lastName }}
               </mat-option>
             </mat-select>
@@ -254,9 +280,7 @@
               <li *ngFor="let option of approversSelect.selected" class="d-flex justify-content-between">
                 {{ getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName}) }}
                 <span class="font-size20">
-                  <mat-icon
-                    (click)="removeId(option.value.ProjectUser.userId, 'approvers'); searchValue(option.value, 'approvers')"
-                    inline="true">close </mat-icon>
+                  <mat-icon (click)="removeId(option.value.ProjectUser.userId, 'approvers'); searchValue(option.value, 'approvers')" inline="true">close </mat-icon>
                 </span>
               </li>
             </ul>
@@ -279,16 +303,23 @@
             <mat-label>Select Users</mat-label>
             <mat-select multiple (openedChange)="createdInput.focus()" #createdSelect>
               <div class="d-flex">
-                <input class="pl-3" #createdInput matInput focused="'true'" type="text"
-                  (input)="search($event.target.value, 'created')" autocomplete="off" placeholder="search"
-                  (keydown)="$event.stopPropagation()" />
+                <input
+                  class="pl-3"
+                  #createdInput
+                  matInput
+                  focused="'true'"
+                  type="text"
+                  (input)="search($event.target.value, 'created')"
+                  autocomplete="off"
+                  placeholder="search"
+                  (keydown)="$event.stopPropagation()"
+                />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
               <mat-divider></mat-divider>
-              <mat-option *ngFor="let project of createdList" [value]="project"
-                (click)="searchValue(project, 'created')">
+              <mat-option *ngFor="let project of createdList" [value]="project" (click)="searchValue(project, 'created')">
                 {{ project.ProjectUser.firstName }} {{ project.ProjectUser.lastName }}
               </mat-option>
             </mat-select>
@@ -299,9 +330,7 @@
               <li *ngFor="let option of createdSelect.selected" class="d-flex justify-content-between">
                 {{ getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName}) }}
                 <span class="font-size20">
-                  <mat-icon
-                    (click)="removeId(option.value.ProjectUser.userId, 'created'); searchValue(option.value, 'created')"
-                    inline="true">close </mat-icon>
+                  <mat-icon (click)="removeId(option.value.ProjectUser.userId, 'created'); searchValue(option.value, 'created')" inline="true">close </mat-icon>
                 </span>
               </li>
             </ul>
@@ -336,14 +365,12 @@
 
           <mat-form-field class="w-100 border-input">
             <mat-label>Min Amount</mat-label>
-            <input matInput type="number" min="0" (input)="checkAmount($event, maxAmt, '0')" autocomplete="off"
-              #minAmt />
+            <input matInput type="number" min="0" (input)="checkAmount($event, maxAmt, '0')" autocomplete="off" #minAmt />
           </mat-form-field>
 
           <mat-form-field class="w-100 border-input">
             <mat-label>Max Amount</mat-label>
-            <input matInput type="number" (input)="checkAmount($event, minAmt, '1')" autocomplete="off" min="0"
-              #maxAmt />
+            <input matInput type="number" (input)="checkAmount($event, minAmt, '1')" autocomplete="off" min="0" #maxAmt />
           </mat-form-field>
         </mat-expansion-panel>
       </div>
@@ -360,16 +387,24 @@
 
         <mat-form-field appearance="fill" class="w-100">
           <mat-label>From</mat-label>
-          <input matInput [max]="raisedMaxDate" [matDatepicker]="raisedFromPicker"
-            (dateChange)="getDate($event, 'raisedFromPicker'); checkToDate($event, raisedToPicker, 'raised')" />
+          <input
+            matInput
+            [max]="raisedMaxDate"
+            [matDatepicker]="raisedFromPicker"
+            (dateChange)="getDate($event, 'raisedFromPicker'); checkToDate($event, raisedToPicker, 'raised')"
+          />
           <mat-datepicker-toggle matSuffix [for]="raisedFromPicker"></mat-datepicker-toggle>
           <mat-datepicker #raisedFromPicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="w-100">
           <mat-label>To</mat-label>
-          <input matInput [min]="raisedMinDate" [matDatepicker]="raisedToPicker"
-            (dateChange)="getDate($event, 'raisedToPicker'); checkFromDate($event, raisedFromPicker, 'raised')" />
+          <input
+            matInput
+            [min]="raisedMinDate"
+            [matDatepicker]="raisedToPicker"
+            (dateChange)="getDate($event, 'raisedToPicker'); checkFromDate($event, raisedFromPicker, 'raised')"
+          />
           <mat-datepicker-toggle matSuffix [for]="raisedToPicker"></mat-datepicker-toggle>
           <mat-datepicker #raisedToPicker></mat-datepicker>
         </mat-form-field>
@@ -388,16 +423,24 @@
 
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>From</mat-label>
-            <input matInput [max]="expiryMaxDate" [matDatepicker]="expiryFromPicker"
-              (dateChange)="getDate($event, 'expiryFromPicker'); checkToDate($event, expiryToPicker, 'expiry')" />
+            <input
+              matInput
+              [max]="expiryMaxDate"
+              [matDatepicker]="expiryFromPicker"
+              (dateChange)="getDate($event, 'expiryFromPicker'); checkToDate($event, expiryToPicker, 'expiry')"
+            />
             <mat-datepicker-toggle matSuffix [for]="expiryFromPicker"></mat-datepicker-toggle>
             <mat-datepicker #expiryFromPicker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>To</mat-label>
-            <input matInput [min]="expiryMinDate" [matDatepicker]="expiryToPicker"
-              (dateChange)="getDate($event, 'expiryToPicker'); checkFromDate($event, expiryFromPicker, 'expiry')" />
+            <input
+              matInput
+              [min]="expiryMinDate"
+              [matDatepicker]="expiryToPicker"
+              (dateChange)="getDate($event, 'expiryToPicker'); checkFromDate($event, expiryFromPicker, 'expiry')"
+            />
             <mat-datepicker-toggle matSuffix [for]="expiryToPicker"></mat-datepicker-toggle>
             <mat-datepicker #expiryToPicker></mat-datepicker>
           </mat-form-field>
@@ -417,16 +460,24 @@
 
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>From</mat-label>
-            <input matInput [max]="requiredMaxDate" [matDatepicker]="requestedFromPicker"
-              (dateChange)="getDate($event, 'requestedFromPicker'); checkToDate($event, requestedToPicker, 'required')" />
+            <input
+              matInput
+              [max]="requiredMaxDate"
+              [matDatepicker]="requestedFromPicker"
+              (dateChange)="getDate($event, 'requestedFromPicker'); checkToDate($event, requestedToPicker, 'required')"
+            />
             <mat-datepicker-toggle matSuffix [for]="requestedFromPicker"></mat-datepicker-toggle>
             <mat-datepicker #requestedFromPicker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>To</mat-label>
-            <input matInput [min]="requiredMinDate" [matDatepicker]="requestedToPicker"
-              (dateChange)="getDate($event, 'requestedToPicker'); checkFromDate($event, requestedFromPicker, 'required')" />
+            <input
+              matInput
+              [min]="requiredMinDate"
+              [matDatepicker]="requestedToPicker"
+              (dateChange)="getDate($event, 'requestedToPicker'); checkFromDate($event, requestedFromPicker, 'required')"
+            />
             <mat-datepicker-toggle matSuffix [for]="requestedToPicker"></mat-datepicker-toggle>
             <mat-datepicker #requestedToPicker></mat-datepicker>
           </mat-form-field>
@@ -458,8 +509,7 @@
     <button mat-button class="bordered-button mr-2" (click)="getFilterExportRequest()">
       Export
     </button>
-    <button mat-button mat-button-base class="main-background-color color-white demo-title"
-      (click)="getFilterRequest()">
+    <button mat-button mat-button-base class="main-background-color color-white demo-title" (click)="getFilterRequest()">
       Apply
     </button>
   </div>
