--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -18,13 +18,13 @@
       <div formArrayName="forms" class="add-unique-container raise-indent-table mat-elevation-z8" *ngIf="subcategory">
         <!-- <div class="col-sm-12"> -->
         <!-- table structure -->
-        <table mat-table [dataSource]="subcategory">
+        <table mat-table [dataSource]="dataSource" matSort>
           <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
           <!-- Position Column -->
-          <ng-container matColumnDef="Material Name">
-            <th mat-header-cell *matHeaderCellDef>Material Name</th>
+          <ng-container matColumnDef="materialName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Material Name</th>
             <td mat-cell *matCellDef="let element">
               <div class="limited-character global" matTooltip=" {{ element.materialName }}">
                 {{ element.materialName }}
@@ -33,14 +33,14 @@
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="Estimated Quantity">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Estimated Quantity</th>
+          <ng-container matColumnDef="estimatedQty">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center">Estimated Quantity</th>
             <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }} {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="Requested Quantity">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
+          <ng-container matColumnDef="requestedQuantity">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-align-center">Requested Quantity</th>
             <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
           </ng-container>
 
@@ -62,7 +62,6 @@
 
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i" class="border-input">
-                <!-- <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy" }}</span> -->
                 <input
                   matInput
                   formControlName="dueDate"
