--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -1,4 +1,4 @@
-<section class="update-info">
+<section *ngIf="dataAvailable" class="update-info">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 terms-margin-set-width col-md-8 offset-md-2">
